extends Control

# ReferÃªncias para os nÃ³s da cena
@onready var container_ranking: VBoxContainer = $ScrollContainer/VBoxContainer
@onready var lista_ranking: VBoxContainer = $ScrollContainer/VBoxContainer/ListaRanking
@onready var cabecalho_ranking: HBoxContainer = $ScrollContainer/VBoxContainer/CabecalhoRanking
@onready var panel_sua_posicao: Panel = $PanelSuaPosicao
@onready var label_sua_posicao: Label = $PanelSuaPosicao/LabelSuaPosicao
@onready var texture_sua_foto: TextureRect = $PanelSuaPosicao/HBoxContainerUsuario/TextureRectSuaFoto
@onready var label_seu_nome: Label = $PanelSuaPosicao/HBoxContainerUsuario/LabelSeuNome
@onready var label_sua_pontuacao: Label = $PanelSuaPosicao/LabelSuaPontuacao
@onready var label_seus_niveis: Label = $PanelSuaPosicao/LabelSeusNiveis
@onready var label_carregando: Label = $LabelCarregando
@onready var label_erro: Label = $LabelErro
@onready var arrow_back: TextureButton = $ArrowBack
var button_hover_script: GDScript

var http: HTTPRequest

func _ready():
	print("=== INICIANDO RANKING DINÃ‚MICO ===")
	
	# Configurar a foto do usuÃ¡rio no painel para ter tamanho fixo
	if texture_sua_foto:
		texture_sua_foto.custom_minimum_size = Vector2(60, 60)
		texture_sua_foto.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
		texture_sua_foto.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
		texture_sua_foto.size_flags_horizontal = Control.SIZE_SHRINK_CENTER
		texture_sua_foto.size_flags_vertical = Control.SIZE_SHRINK_CENTER
	
	# Debug das referÃªncias
	print("ðŸ” ReferÃªncias carregadas:")
	print("  container_ranking: ", container_ranking != null)
	print("  lista_ranking: ", lista_ranking != null)
	print("  cabecalho_ranking: ", cabecalho_ranking != null)
	print("  panel_sua_posicao: ", panel_sua_posicao != null)
	print("  label_carregando: ", label_carregando != null)
	print("  label_erro: ", label_erro != null)
	print("  arrow_back: ", arrow_back != null)
	
	# Verificar SessionManager
	if not SessionManager or SessionManager.auth_token == "":
		print("âŒ SessionManager nÃ£o disponÃ­vel")
		mostrar_erro("FaÃ§a login para ver o ranking")
		return
	
	print("âœ… SessionManager disponÃ­vel - User:", SessionManager.user_name)
	
	http = HTTPRequest.new()
	add_child(http)
	http.request_completed.connect(_on_ranking_carregado)
	
	if arrow_back:
		arrow_back.pressed.connect(_on_voltar_pressed)
	else:
		print("âŒ ArrowBack nÃ£o encontrado")
	
	carregar_ranking()
	
	button_hover_script = preload("res://ButtonHoverEffect.gd")
	
	# Aplicar efeito hover apÃ³s um pequeno delay para garantir que todos os botÃµes estejam carregados
	await get_tree().create_timer(0.1).timeout
	aplicar_efeito_hover_todos_botoes()

func carregar_ranking():
	print("ðŸ”„ Carregando ranking do servidor...")
	
	# Resetar UI
	label_carregando.visible = true
	label_erro.visible = false
	panel_sua_posicao.visible = false
	
	# Limpar lista de ranking anterior
	for child in lista_ranking.get_children():
		if child != cabecalho_ranking:  # NÃ£o remover o cabeÃ§alho
			child.queue_free()
	
	var headers = ["Authorization: Bearer " + SessionManager.auth_token]
	print("ðŸ“¤ Fazendo requisiÃ§Ã£o para /global-ranking")
	
	var error = http.request("http://127.0.0.1:5000/global-ranking", headers, HTTPClient.METHOD_GET)
	
	if error != OK:
		print("âŒ Erro na requisiÃ§Ã£o HTTP:", error)
		mostrar_erro("Erro ao carregar ranking")

func _on_ranking_carregado(result: int, response_code: int, headers: PackedStringArray, body: PackedByteArray):
	print("ðŸ“¥ Resposta do servidor recebida!")
	print("   Result:", result)
	print("   Response Code:", response_code)
	
	label_carregando.visible = false
	
	if result != HTTPRequest.RESULT_SUCCESS:
		print("âŒ Erro de conexÃ£o:", result)
		mostrar_erro("Erro de conexÃ£o")
		return
	
	var response = body.get_string_from_utf8()
	print("   Response Body:", response)
	
	var json = JSON.new()
	var parse_error = json.parse(response)
	
	if parse_error != OK:
		print("âŒ Erro ao parsear JSON:", parse_error)
		mostrar_erro("Erro ao processar ranking")
		return
		
	var data = json.get_data()
	print("âœ… JSON parseado com sucesso!")
	
	if response_code == 200:
		if data != null and "top_ranking" in data:
			print("ðŸŽ¯ Dados do ranking vÃ¡lidos encontrados")
			print("   top_ranking size:", data["top_ranking"].size())
			if "user_ranking" in data:
				print("   user_ranking disponÃ­vel")
			exibir_ranking(data)
		else:
			print("âŒ Formato de ranking invÃ¡lido")
			mostrar_erro("Formato de ranking invÃ¡lido")
	else:
		print("âŒ Erro HTTP:", response_code)
		mostrar_erro("Erro ao carregar ranking: " + str(response_code))

func exibir_ranking(data: Dictionary):
	var top_ranking = data["top_ranking"]
	var user_ranking = data.get("user_ranking", {})
	
	print("ðŸŽ¨ Exibindo ranking com ", top_ranking.size(), " jogadores")
	
	# FILTRAR: Mostrar apenas jogadores com pontuaÃ§Ã£o > 0
	var ranking_filtrado = []
	for jogador in top_ranking:
		if jogador.get("total_score", 0) > 0:
			ranking_filtrado.append(jogador)
	
	print("ðŸŽ¯ Ranking filtrado: ", ranking_filtrado.size(), " jogadores com pontuaÃ§Ã£o > 0")
	
	# LIMITAR: Mostrar apenas top 5
	if ranking_filtrado.size() > 5:
		ranking_filtrado = ranking_filtrado.slice(0, 5)
		print("ðŸ“Š Limitado ao top 5 jogadores")
	
	# DEBUG: Verificar fotos recebidas
	print("ðŸ“¸ DEBUG - Fotos recebidas do servidor:")
	for i in range(ranking_filtrado.size()):
		var jogador = ranking_filtrado[i]
		var tem_foto = jogador.has("profile_image") and jogador["profile_image"] != null and jogador["profile_image"] != ""
		var foto_tamanho = jogador["profile_image"].length() if tem_foto else 0
		print("   Jogador ", jogador["username"], " - Tem foto: ", tem_foto, " - Tamanho: ", foto_tamanho)
	
	# Adicionar jogadores do ranking
	for i in range(ranking_filtrado.size()):
		var jogador = ranking_filtrado[i]
		print("   ðŸ‘¤ Jogador ", i + 1, ":", jogador["username"], " - Pontos:", jogador["total_score"])
		var linha = criar_linha_ranking(jogador, i + 1)
		if linha:
			lista_ranking.add_child(linha)
			print("   âœ… Linha adicionada para ", jogador["username"])
		else:
			print("   âŒ Falha ao criar linha para ", jogador["username"])
	
	# Verificar se usuÃ¡rio estÃ¡ no top ranking
	var usuario_no_top = false
	if user_ranking:
		for jogador in ranking_filtrado:
			if jogador["username"] == SessionManager.user_name:
				usuario_no_top = true
				break
	
	# Exibir seÃ§Ã£o do usuÃ¡rio se nÃ£o estiver no top E se tiver pontuaÃ§Ã£o > 0
	if user_ranking and user_ranking.get("total_score", 0) > 0 and not usuario_no_top:
		exibir_secao_usuario(user_ranking)
	elif usuario_no_top:
		print("âœ… UsuÃ¡rio estÃ¡ no Top ", ranking_filtrado.size())
	else:
		print("â„¹ï¸  UsuÃ¡rio nÃ£o tem pontuaÃ§Ã£o no ranking")

func criar_linha_ranking(jogador: Dictionary, posicao: int) -> HBoxContainer:
	var linha = HBoxContainer.new()
	linha.add_theme_constant_override("separation", 20)
	linha.name = "LinhaRanking" + str(posicao)
	linha.custom_minimum_size = Vector2(0, 70)  # Aumentado para acomodar foto maior
	
	# Coluna PosiÃ§Ã£o
	var coluna_pos = Label.new()
	coluna_pos.name = "LabelPosicao" + str(posicao)
	coluna_pos.text = str(posicao) + "Â°"
	coluna_pos.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	coluna_pos.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	coluna_pos.custom_minimum_size.x = 80
	
	# Emojis para top 3
	if posicao == 1:
		coluna_pos.text += " ðŸ¥‡"
		coluna_pos.add_theme_color_override("font_color", Color.GOLD)
	elif posicao == 2:
		coluna_pos.text += " ðŸ¥ˆ"
		coluna_pos.add_theme_color_override("font_color", Color.SILVER)
	elif posicao == 3:
		coluna_pos.text += " ðŸ¥‰"
		coluna_pos.add_theme_color_override("font_color", Color.ORANGE)
	
	# Coluna Jogador (com foto e nome)
	var coluna_jogador = HBoxContainer.new()
	coluna_jogador.name = "ContainerJogador" + str(posicao)
	coluna_jogador.add_theme_constant_override("separation", 10)
	coluna_jogador.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	coluna_jogador.custom_minimum_size.x = 200
	
	var foto_jogador = TextureRect.new()
	foto_jogador.name = "FotoJogador" + str(posicao)
	# MESMO TAMANHO QUE O PAINEL: 60x60
	foto_jogador.custom_minimum_size = Vector2(60, 60)
	foto_jogador.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
	foto_jogador.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
	foto_jogador.size_flags_horizontal = Control.SIZE_SHRINK_CENTER
	foto_jogador.size_flags_vertical = Control.SIZE_SHRINK_CENTER
	
	# Carregar foto do perfil (abordagem simplificada)
	var profile_image = jogador.get("profile_image", "")
	if profile_image and profile_image != "":
		print("ðŸ“¸ Carregando foto para: ", jogador["username"])
		var texture = criar_textura_da_string_base64(profile_image)
		if texture:
			foto_jogador.texture = texture
			print("âœ… Foto carregada com sucesso para: ", jogador["username"])
		else:
			foto_jogador.texture = carregar_placeholder()
			print("âŒ Falha ao carregar foto para: ", jogador["username"])
	else:
		foto_jogador.texture = carregar_placeholder()
		print("ðŸ“¸ Usando placeholder para: ", jogador["username"])
	
	var nome_jogador = Label.new()
	nome_jogador.name = "LabelNome" + str(posicao)
	nome_jogador.text = jogador["username"]
	nome_jogador.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	nome_jogador.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	
	# Destacar usuÃ¡rio atual
	if SessionManager and jogador["username"] == SessionManager.user_name:
		nome_jogador.add_theme_color_override("font_color", Color.CYAN)
		nome_jogador.text += " (vocÃª)"
	
	coluna_jogador.add_child(foto_jogador)
	coluna_jogador.add_child(nome_jogador)
	
	# Coluna PontuaÃ§Ã£o - sem casas decimais
	var coluna_pontos = Label.new()
	coluna_pontos.name = "LabelPontuacao" + str(posicao)
	var pontuacao_int = int(jogador["total_score"])
	coluna_pontos.text = str(pontuacao_int)
	coluna_pontos.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	coluna_pontos.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	coluna_pontos.custom_minimum_size.x = 120
	
	# Coluna NÃ­veis - sem casas decimais
	var coluna_niveis = Label.new()
	coluna_niveis.name = "LabelNiveisComp" + str(posicao)
	var niveis_int = int(jogador["levels_completed"])
	coluna_niveis.text = str(niveis_int)
	coluna_niveis.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	coluna_niveis.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	coluna_niveis.custom_minimum_size.x = 100
	
	# Adicionar colunas Ã  linha
	linha.add_child(coluna_pos)
	linha.add_child(coluna_jogador)
	linha.add_child(coluna_pontos)
	linha.add_child(coluna_niveis)
	
	return linha

func criar_textura_da_string_base64(base64_string: String) -> Texture2D:
	if base64_string == "" or base64_string == null:
		return null
	
	# Limpar a string base64 se tiver cabeÃ§alho data URL
	var clean_base64 = base64_string
	if "base64," in base64_string:
		clean_base64 = base64_string.split("base64,")[1]
	
	var image = Image.new()
	var image_data = Marshalls.base64_to_raw(clean_base64)
	
	# Tentar carregar como PNG, JPG ou WebP
	var error = image.load_png_from_buffer(image_data)
	if error != OK:
		error = image.load_jpg_from_buffer(image_data)
	if error != OK:
		error = image.load_webp_from_buffer(image_data)
	
	if error == OK:
		var texture = ImageTexture.create_from_image(image)
		return texture
	
	return null

func carregar_placeholder() -> Texture2D:
	var placeholder = load("res://cat.png")
	if not placeholder:
		print("âŒ NÃ£o foi possÃ­vel carregar o placeholder")
	return placeholder

func exibir_secao_usuario(user_ranking: Dictionary):
	print("ðŸ‘¤ Exibindo seÃ§Ã£o do usuÃ¡rio")
	
	# Atualizar dados do usuÃ¡rio
	var posicao_int = int(user_ranking.get("position", 0))
	label_sua_posicao.text = "Sua PosiÃ§Ã£o: " + str(posicao_int) + "Â°"
	
	label_seu_nome.text = SessionManager.user_name
	
	var pontuacao_int = int(user_ranking.get("total_score", 0))
	label_sua_pontuacao.text = "PontuaÃ§Ã£o: " + str(pontuacao_int)
	
	var niveis_int = int(user_ranking.get("levels_completed", 0))
	label_seus_niveis.text = "NÃ­veis Completados: " + str(niveis_int)
	
	# Carregar foto do usuÃ¡rio
	var profile_image = user_ranking.get("profile_image", "")
	if profile_image and profile_image != "":
		print("ðŸ“¸ Carregando foto do usuÃ¡rio do user_ranking")
		var texture = criar_textura_da_string_base64(profile_image)
		if texture:
			texture_sua_foto.texture = texture
			print("âœ… Foto do usuÃ¡rio carregada com sucesso")
		else:
			texture_sua_foto.texture = carregar_placeholder()
			print("âŒ Falha ao carregar foto do usuÃ¡rio")
	else:
		texture_sua_foto.texture = carregar_placeholder()
		print("ðŸ“¸ Usando placeholder para usuÃ¡rio")
	
	# Garantir que a foto tenha o tamanho correto (60x60)
	texture_sua_foto.custom_minimum_size = Vector2(60, 60)
	texture_sua_foto.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
	texture_sua_foto.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
	
	panel_sua_posicao.visible = true
	print("âœ… SeÃ§Ã£o do usuÃ¡rio exibida")

func mostrar_erro(mensagem: String):
	print("âŒ Erro:", mensagem)
	label_erro.text = mensagem
	label_erro.visible = true

func _on_voltar_pressed():
	print("â† Voltando para tela principal...")
	get_tree().change_scene_to_file("res://Main.tscn")


func aplicar_efeito_hover_todos_botoes():
	var botoes = _buscar_todos_botoes(self)
	
	for botao in botoes:
		if not botao.has_node("ButtonHoverEffect"):
			var effect_node = Node.new()
			effect_node.set_script(button_hover_script)
			botao.add_child(effect_node)
			effect_node.name = "ButtonHoverEffect"

func _buscar_todos_botoes(node: Node) -> Array:
	var botoes = []
	
	if node is BaseButton and node.visible:
		botoes.append(node)
	
	for child in node.get_children():
		botoes.append_array(_buscar_todos_botoes(child))
	
	return botoes
